@@ -3,6 +3,8 @@
 
 1.7-25
 
+* anova.glmlist no longer called.
+
 * Compiled code now uses R_chck_calloc and R_chk_free for memory management
   to avoid the possibility of unfriendly exit on running out of memory. 
 
